# perfetto-mcp

./: AGENTS.md  CLAUDE.md  README-internal.md  README.md  main.py  pyproject.toml
docs/: Perfetto-MCP-Concepts.md
src/perfetto_mcp/: __init__.py  server.py
src/perfetto_mcp/resource/: __init__.py  trace_analysis.py
src/perfetto_mcp/tools/: __init__.py  anr_detection.py  anr_root_cause.py  base.py  binder_transaction_profiler.py  cpu_utilization.py  jank_frames.py  memory_leak_detector.py  slice_info.py  sql_query.py  thread_contention_analyzer.py  trace_data.py
src/perfetto_mcp/utils/: query_helpers.py
